Fix edit profile displaying icon on mobile

--- a/src/app/profile/edit-profile/edit-profile.component.css
+++ b/src/app/profile/edit-profile/edit-profile.component.css
@@ -60,7 +60,8 @@ mat-form-field {
 }
 
 
-button.upload-photo:not(:hover):not(.touchScreen) .hidden {
+button.upload-photo:not(:hover) .hidden,
+button.upload-photo.touchScreen .hidden {
   visibility: hidden;
 }
 
